Add slash commands and runtime configuration

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ DISCORD_TOKEN=your-discord-bot-token
 OPENAI_API_KEY=your-openai-api-key
 GOOGLE_API_KEY=
 GOOGLE_CSE_ID=
+OAI_TEMPERATURE=1.0
+OAI_TOP_P=1.0
+OAI_MAX_TOKENS=
+OAI_STOP=
+OAI_SEED=
+OAI_MODEL=o3
