Add splitter tests and CI updates

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-openai>=1.0.0
-discord.py
-python-dotenv
-httpx
 black
-ruff
+discord.py
+httpx
+openai>=1.0.0
 pre-commit
+pytest
+pytest-asyncio
+python-dotenv
+ruff
