--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install deps
         run: |
-          python -m pip install -r requirements.txt pytest
+          python -m pip install -r requirements.txt pytest pytest-asyncio
       - name: Lint (Black)
         run: black --check .
       - name: Lint (Ruff)
         run: ruff check .
       - name: Tests
-        run: pytest -q || echo "pytest skipped (no tests yet)"
+        run: pytest -q
