--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install deps
-        run: |
-          python -m pip install -r requirements.txt pytest
+        run: python -m pip install -r requirements.txt
       - name: Lint (Black)
         run: black --check .
       - name: Lint (Ruff)
         run: ruff check .
       - name: Tests
-        run: pytest -q || echo "pytest skipped (no tests yet)"
+        run: pytest -q
