--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,13 @@ jobs:
           OPENAI_API_KEY: "dummy"
         run: |
           python -m pytest -q || true
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build image (no push)
+        run: docker build -t discord-lm-app:ci-test .
