--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
         run: black --check .
       - name: Lint (Ruff)
         run: ruff check .
+      - name: Type check (mypy)
+        run: mypy .
       - name: Tests
         env:
           OPENAI_API_KEY: "dummy"
