--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,10 @@ line-length = 100
 [tool.ruff]
 line-length = 100
 fix = true
+
+[tool.mypy]
+python_version = "3.11"
+ignore_missing_imports = true
+strict_optional = true
+warn_unused_configs = true
+show_error_codes = true
