--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,3 +38,17 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Build image (no push)
         run: docker build -t discord-lm-app:ci-test .
+
+  docs-build:
+    runs-on: ubuntu-latest
+    needs: docker-build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install mkdocs
+        run: python -m pip install mkdocs-material mkdocstrings[python]
+      - name: Build docs
+        run: mkdocs build --strict
