Document coverage reporting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,18 @@ jobs:
         run: ruff check .
       - name: Type check (mypy)
         run: mypy .
-      - name: Tests
+      - name: Tests + coverage
         env:
           OPENAI_API_KEY: "dummy"
         run: |
-          python -m pytest -q || true
+          pytest \
+            --cov=src/discord_lm_bot \
+            --cov-report=xml \
+            --cov-report=term
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          flags: unittests
 
   docker-build:
     runs-on: ubuntu-latest
