--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,6 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install mkdocs
-        run: python -m pip install mkdocs-material mkdocstrings[python]
+        run: python -m pip install mkdocs-material mkdocstrings[python] mkdocs-linkcheck
       - name: Build docs
         run: mkdocs build --strict
