--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Install mkdocs
-        run: python -m pip install mkdocs-material mkdocstrings[python]
+        - name: Install MkDocs deps
+          run: |
+            python -m pip install mkdocs-material \
+                               mkdocstrings[python] \
+                               mkdocs-linkcheck
       - name: Build docs
         run: mkdocs build --strict
