--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# File purpose: Template of environment variables.
 DISCORD_TOKEN=your-discord-bot-token
 OPENAI_API_KEY=your-openai-api-key
 GOOGLE_API_KEY=
