--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
       - name: Install deps
         run: |
           python -m pip install -r requirements.txt
@@ -30,7 +31,8 @@ jobs:
           pytest \
             --cov=src/discord_lm_bot \
             --cov-report=xml \
-            --cov-report=term
+            --cov-report=term \
+            --cov-fail-under=60
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
