--- a/.github/workflows/issue-sync.yml
+++ b/.github/workflows/issue-sync.yml
@@ -13,29 +13,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Extract Task ID
+
+      - name: Extract Task ID from PR title
         id: task
         env:
           PR_TITLE: ${{ github.event.pull_request.title }}
         run: |
           ID=$(python - <<'PY'
 import os, re
-title = os.environ['PR_TITLE']
-m = re.search(r"(?P<id>[a-z0-9-]+-[0-9]+)", title)
+m = re.search(r'([a-z0-9\-]+-\d+)', os.getenv("PR_TITLE", ""), re.I)
 if m:
-    print(m.group('id'))
+    print(m.group(1))
 PY
           )
-          echo "id=$ID" >> "$GITHUB_OUTPUT"
-      - name: Ensure issue exists
-        if: steps.task.outputs.id
+          echo "id=$ID" >>"$GITHUB_OUTPUT"
+
+      - name: Ensure issue exists (create if missing)
+        if: ${{ steps.task.outputs.id != '' }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
           ISSUE=$(python tools/ensure_task_issue.py "${{ steps.task.outputs.id }}")
-          echo "issue=$ISSUE" >> $GITHUB_OUTPUT
+          echo "ISSUE=$ISSUE" >>"$GITHUB_OUTPUT"
+
       - name: Label and comment
-        if: steps.task.outputs.id
+        if: ${{ steps.task.outputs.id != '' }}
         env:
-          GH_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
-          gh api repos/${{ github.repository }}/issues/${{ steps.task.outputs.issue }}/labels -X PUT -f labels='["Task-ID","status:done"]'
-          gh api repos/${{ github.repository }}/issues/${{ steps.task.outputs.issue }}/comments -f body="Closed by ${{ github.event.pull_request.html_url }}"
+          gh issue edit "$ISSUE" --add-label "Task-ID,status:done"
+          gh issue comment "$ISSUE" --body "Closed by ${{ github.event.pull_request.html_url }}"
