--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "discord-lm-app",
   "image": "mcr.microsoft.com/devcontainers/python:3.11",
-  "postCreateCommand": "pip install -r requirements.txt && pre-commit install && black . && ruff --fix .",
+  "postCreateCommand": "bash scripts/dev-bootstrap.sh",
   "customizations": {
     "vscode": {
       "extensions": ["ms-python.python"]
