--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
         uses: codecov/codecov-action@v4
         with:
           flags: unittests
+          name: codecov-umbrella
 
   docker-build:
     runs-on: ubuntu-latest
